# bestaudiosource

./: meson.build
msvc/: BestAudioSource.sln  BestAudioSource.vcxproj  BestAudioSource.vcxproj.filters
src/: audiosource.cpp  audiosource.h  avisynth.cpp  vapoursynth.cpp
